added new file for pandas with stock data

--- a/Python-Part-1.ipynb
+++ b/Python-Part-1.ipynb
@@ -15,12 +15,14 @@
     "### Python can do a lot! Make graphs, trade stocks, build machine learning algorithms!\n",
     "\n",
     "<h3>\"Why should I care?\"</h3>\n",
-    "Data analysis is huge! Data scientists are one of the most sought after positions! They make a ton of money\n",
+    "Don't you want to make cool things and do what you love while making a ton of money?\n",
     "\n",
-    "<h3>\"...Ok I don't care about money!\"</h3>\n",
-    "<p>That's fine! Programming is a skill that helps develop critical thinking!</p>\n",
+    "<h3>\"...I don't care about money!\"</h3>\n",
+    "<p>That's fine! Programming is a skill that helps develop critical thinking! It can help you think in a different way!</p>\n",
     "\n",
-    "There are plenty of cool things you can do with Python. Thanks for coming out to this workshop to get a glimpse of how Python works and what you can do with it!\n",
+    "There are plenty of cool things you can do with Python. Later, I'll show some cool projects I've done using Python! \n",
+    "\n",
+    "Thanks for coming out to this workshop to get a glimpse of how Python works and what you can do with it!\n",
     "\n"
    ]
   },
@@ -30,14 +32,37 @@
    "source": [
     "## Strings\n",
     "\n",
-    "### To run this tab, press the \"Run\" button on the top bar or press \"Ctrl-Enter\""
+    "### To run a cell, press the \"Run\" button on the top bar or press \"Ctrl-Enter\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Strings:\n",
+      "\n",
+      "hello\n",
+      "helloworld\n",
+      "hello world\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'hello world'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Strings\n",
     "\n",
@@ -53,7 +78,7 @@
     "print(hello + world)\n",
     "\n",
     "hello_world = hello + \" \" + world\n",
-    "print(hello_word)\n",
+    "print(hello_world)\n",
     "\n",
     "# You don't need to print if you want to get the output, just type the variable out:\n",
     "hello_world # Will get Out[#]:  'hello world'\n",
@@ -77,9 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "String Indexing:\n",
+      "\n",
+      "i\n",
+      "is an example of a long string\n",
+      "gnirts gnol a fo elpmaxe na si sihT\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nString Indexing:\\n\")\n",
     "\n",
@@ -359,11 +397,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function definitions\n",
+    "All functions start with **def**, which states we are defining a function. This is followed by the function name, and cap it off with a **():**\n",
+    "\n",
+    "Function name formatting:\n",
+    " - All lower case\n",
+    " - Underscores to seperate words\n",
+    " \n",
+    "Example:\n",
+    " - **def sample_function():**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_hello_world():\n",
+    "    \"\"\"This defines a function, proper commenting dictates that we state the fucntion (printing hello) in this section\n",
+    "    Additional comments (args, return values, etc) can be made in the following lines\n",
+    "    \"\"\"\n",
+    "    # Using the print command we can send ouptut to the console\n",
+    "    print(\"hello world\")\n",
+    "\n",
+    "# After defining our function we can invoke it simply by calling the function name\n",
+    "# Note: Must define a function in code before calling it, otherwise we run into the error seen below\n",
+    "print_hello_world()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try it yourself!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Problem 1\n",
+    "\"\"\"\n",
+    "Write a function that will take two lists (lst1 and lst2), contianing strings and ints, and returns\n",
+    "a singluar list of ints (including any strings that can be represented as ints: Ex. \"5\" -> 5)\n",
+    "    - Hint1: int(\"5\") -> 5\n",
+    "    - Hint2: You'll probably want to use a try except statement in your function (google how to use those!)\n",
+    "    \n",
+    "Ex. lst1 = [1,'hello',34,'-23'], lst2 = [54,'23','bye',3] -> [1,34,-23,54,23,3]\n",
+    "\"\"\"\n",
+    "\n",
+    "def prob1(lst1, lst2):\n",
+    "    # insert code here...\n",
+    "    \n",
+    "lst1 = [1,'hello',34,'-23']\n",
+    "lst2 = [54,'23','bye',3]\n",
+    "\n",
+    "prob1(lst1, lst2)"
+   ]
   }
  ],
  "metadata": {
