updates to finish the workshop

--- a/Python-Part-1.ipynb
+++ b/Python-Part-1.ipynb
@@ -37,32 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Strings:\n",
-      "\n",
-      "hello\n",
-      "helloworld\n",
-      "hello world\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'hello world'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Strings\n",
     "\n",
@@ -82,6 +59,13 @@
     "\n",
     "# You don't need to print if you want to get the output, just type the variable out:\n",
     "hello_world # Will get Out[#]:  'hello world'\n",
+    "\n",
+    "# however, you can only have one output from a notebook. so this will only print the last variable:\n",
+    "a = 'suraj'\n",
+    "b = 'shah'\n",
+    "\n",
+    "a\n",
+    "b\n",
     "\n"
    ]
   },
@@ -102,22 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "String Indexing:\n",
-      "\n",
-      "i\n",
-      "is an example of a long string\n",
-      "gnirts gnol a fo elpmaxe na si sihT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nString Indexing:\\n\")\n",
     "\n",
@@ -261,6 +232,13 @@
     "print(c)\n",
     "\n",
     "sum(b) # But you need to be careful that the operation can iterate over all of the elements in the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try it yourself!"
    ]
   },
   {
@@ -413,17 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_hello_world():\n",
     "    \"\"\"This defines a function, proper commenting dictates that we state the fucntion (printing hello) in this section\n",
@@ -462,6 +432,7 @@
     "\n",
     "def prob1(lst1, lst2):\n",
     "    # insert code here...\n",
+    "    return None\n",
     "    \n",
     "lst1 = [1,'hello',34,'-23']\n",
     "lst2 = [54,'23','bye',3]\n",
