--- a/Python-Part-2.ipynb
+++ b/Python-Part-2.ipynb
@@ -15,12 +15,12 @@
     "\n",
     "### Okay so what is all this code?\n",
     "Directly below, this cell is importing packages that we will use. \n",
-    "Packages are basically other functions people have coded for us to use"
+    "Packages are basically other functions people have written for us to use. It makes things like machine learning and high frequency trading possible!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataframe\n",
-    "df is a variable shortend for \"dataframe\" - basically an excel table in Python. I'll be honest, I haven't actually opened this csv so I don't know what the data is! So...let's use python to find out."
+    "### Dataframes\n",
+    "df is a variable shortend for \"dataframe\" - basically an excel table in Python. So...let's use python to find out what this data is and extrapolate information from it. "
    ]
   },
   {
@@ -187,11 +187,12 @@
     }
    ],
    "source": [
+    "# making a df variable, reading in a csv and then printing out the rows and coloumns\n",
     "df = pd.read_csv('sample_data.csv')\n",
     "print('# of columns:', len(df.columns))\n",
     "print('# of rows:', len(df))\n",
     "\n",
-    "# Will output 5 rows of the data\n",
+    "# Will output 5 rows of the data (good to see a sample of the data)\n",
     "df.head()"
    ]
   },
@@ -372,8 +373,16 @@
     }
    ],
    "source": [
-    "# Dataframe output of everything\n",
+    "# Dataframe output of everything (Transposing the data)\n",
     "df.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data visualization\n",
+    "Visualizing data is super important! It's much easier to see your numbers in a pretty graph than a boring table! Let's use Pandas and Python to see what the data looks like"
    ]
   },
   {
@@ -406,6 +415,7 @@
    ],
    "source": [
     "# clearly sacremento is not the only city with housing data but there's a lot\n",
+    "# this gets the top 5 from the \"city\" column in the data frame and makes a bar chart\n",
     "df['city'].value_counts().head(5).plot.bar()"
    ]
   },
