added answers for part 1 to different branch

--- a/Python-Part-1.ipynb
+++ b/Python-Part-1.ipynb
@@ -113,15 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world \n",
+      "you were able to parse this text!\n"
+     ]
+    }
+   ],
    "source": [
     "#Problem 1\n",
     "\"\"\"\n",
     "Using indexing and concatentaiton, print out \"Hello world\" from the provided string (hw)\n",
     "\"\"\"\n",
     "hw = \"Hello there are a couple of words here that make the world far apart\"\n",
+    "print(hw[:5] + \" \" + hw[-15:-9])\n",
     "\n",
     "#Problem 2\n",
     "\"\"\"\n",
@@ -130,7 +140,7 @@
     "\"\"\"\n",
     "encoded_str = \"ydouuf bwberrmep daebklqep ptgot vpdamrgshev itghfipsq itxehxutk!q\"\n",
     "\n",
-    "\n"
+    "print(encoded_str[::2])\n"
    ]
   },
   {
@@ -243,26 +253,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' because test is not a list so you need to wrap it with a list, ex: test = [a.sort()]\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Problem 1\n",
     "\"\"\"\n",
     "What happens when we sum ints and floats?\n",
     "\"\"\"\n",
-    "\n",
     "a = 2\n",
     "b = 2.3\n",
     "print(a+b)\n",
     "\n",
-    "#Problem 2\n",
+    "# Problem 2n\n",
     "\"\"\"\n",
-    "What happens if we set a value equal to a sorted list (e.g. test = a.sort()), \n",
+    "What happens if we set a value equal to a sorted list (e.g. test = a.sort()),\n",
     "can anyone explain why this happens?\n",
     "\"\"\"\n",
     "\n",
-    "\n"
+    "\"\"\" because test is not a list so you need to wrap it with a list, ex: test = [a.sort()]\n",
+    "\"\"\""
    ]
   },
   {
@@ -348,15 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.88888888888889\n",
+      "True\n",
+      "True\n",
+      "[50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98]\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1\n",
     "\"\"\"\n",
     "Given the list (lst) below, calculate the average or mean using a for loop\n",
     "\"\"\"\n",
     "lst = [23,55,2,57,9,423,4,75,8] #should get 72.88\n",
+    "sum= 0\n",
+    "for val in lst:\n",
+    "    sum += val\n",
+    "    \n",
+    "print(sum / len(lst))\n",
     "\n",
     "# Problem 2\n",
     "\"\"\"\n",
@@ -365,13 +409,21 @@
     "lst = [32, 394, \"hello\", 312, \"Monday\", 9.0, True, \"Python\"]\n",
     "val = \"Monday\"\n",
     "\n",
+    "for item in lst:\n",
+    "    if(val == item):\n",
+    "        print(True)\n",
+    "      \n",
+    "# OR you can do this:\n",
+    "\n",
+    "print(val in lst)\n",
     "\n",
     "\n",
-    "# Problem 3\n",
+    "# Problem 1\n",
     "\"\"\"\n",
     "Print out every even number from [50, 100] using a for loop\n",
     "   - Hint: the range() method works like indexing (start, stop, jump)\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "print(list(range(50,100, 2)))\n"
    ]
   },
   {
@@ -416,23 +468,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 34, -23, 54, 23, 3]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Problem 1\n",
     "\"\"\"\n",
     "Write a function that will take two lists (lst1 and lst2), contianing strings and ints, and returns\n",
     "a singluar list of ints (including any strings that can be represented as ints: Ex. \"5\" -> 5)\n",
     "    - Hint1: int(\"5\") -> 5\n",
-    "    - Hint2: You'll probably want to use a try except statement in your function (google how to use those!)\n",
+    "    - Hint2: You'll probably want to use a try except statement in your function\n",
     "    \n",
     "Ex. lst1 = [1,'hello',34,'-23'], lst2 = [54,'23','bye',3] -> [1,34,-23,54,23,3]\n",
     "\"\"\"\n",
     "\n",
     "def prob1(lst1, lst2):\n",
-    "    # insert code here...\n",
-    "    return None\n",
+    "    \n",
+    "    lst3 = []\n",
+    "    for val in lst1:\n",
+    "        try:\n",
+    "\n",
+    "            if(type(val) == str):\n",
+    "                val = int(val)\n",
+    "\n",
+    "            lst3.append(val)\n",
+    "            \n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "    \n",
+    "    for val in lst2:\n",
+    "        try:\n",
+    "            if(type(val) == str):\n",
+    "                val = int(val)\n",
+    "            \n",
+    "            lst3.append(val)\n",
+    "            \n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "\n",
+    "    return lst3\n",
+    "        \n",
     "    \n",
     "lst1 = [1,'hello',34,'-23']\n",
     "lst2 = [54,'23','bye',3]\n",
