--- a/Python-Part-1.ipynb
+++ b/Python-Part-1.ipynb
@@ -324,7 +324,8 @@
     "print(\"**********\\nTraditional For Loop:\")  \n",
     "\n",
     "# For this we need something that generates a list of indexs, we'll use the range() function\n",
-    "print(range(10)) # This will produce a range of values from range(init, end)\n",
+    "print(*range(10)) # This will produce a range of values from range(init, end)\n",
+    "# * unpacks the sequence -- basically expands the function\n",
     "\n",
     "for index in range(len(lst)): #Here we loop through the index of the list\n",
     "    # range is a generator function that will generate numbers [0, len(lst))\n",
